--- a/EJDAWeb/WebContent/WEB-INF/EJdaFormParameterConfig.properties
+++ b/EJDAWeb/WebContent/WEB-INF/EJdaFormParameterConfig.properties
@@ -32,3 +32,39 @@ CONSIGNEE_ADDRESS = Consignee/Importer Address
 AUTHORAGENT_CODE = Code of Authorized Agent
 AUTHORAGENT_NAME = Code of Authorized Name
 AUTHORAGENT_ADDRESS = Code of Authorized Address
+
+#Report
+no=\u0E25\u0E33\u0E14\u0E31\u0E1A\u0E17\u0E35\u0E48
+reportType=\u0e1b\u0e23\u0e30\u0e40\u0e20\u0e17\u0e43\u0e1a\u0e02\u0e19 :
+from=\u0e15\u0e31\u0e49\u0e07\u0e41\u0e15\u0e48 :
+to=\u0e16\u0e36\u0e07 :
+goverment=\u0e01\u0e23\u0e21\u0e28\u0e38\u0e25\u0e01\u0e32\u0e01\u0e23\u0e2a\u0e07\u0e02\u0e25\u0e32
+reportStat=\u0e23\u0e32\u0e22\u0e07\u0e32\u0e19\u0e1b\u0e23\u0e30\u0e21\u0e27\u0e25\u0e1c\u0e25\u0e17\u0e32\u0e07\u0e2a\u0e16\u0e34\u0e15\u0e34\u0e01\u0e32\u0e23\u0e22\u0e37\u0e48\u0e19\u0e43\u0e1a\u0e02\u0e19
+ofMonth=\u0e1b\u0e23\u0e30\u0e08\u0e33\u0e40\u0e14\u0e37\u0e2d\u0e19
+listNumber=\u0e25\u0e33\u0e14\u0e31\u0e1a\u0e17\u0e35\u0e48
+listReport=\u0e23\u0e32\u0e22\u0e01\u0e32\u0e23\u0e43\u0e1a\u0e02\u0e19
+qty_each_one=\u0e08\u0e33\u0e19\u0e27\u0e19\u0e43\u0e1a\u0e02\u0e19\u0e2a\u0e34\u0e19\u0e04\u0e49\u0e32(\u0e09\u0e1a\u0e31\u0e1a)
+qty_box=\u0e08\u0e33\u0e19\u0e27\u0e19(\u0e2b\u0e35\u0e1a\u0e2b\u0e48\u0e2d)
+weight=\u0e19\u0e49\u0e33\u0e2b\u0e19\u0e31\u0e01(\u0e01\u0e01.)
+price=\u0e23\u0e32\u0e04\u0e32(\u0e1a\u0e32\u0e17)
+garuntee=\u0e40\u0e07\u0e34\u0e19\u0e27\u0e32\u0e07\u0e1b\u0e23\u0e30\u0e01\u0e31\u0e19(\u0e1a\u0e32\u0e17)
+arkorn_stamp=\u0e2d\u0e32\u0e01\u0e23(\u0e1a\u0e32\u0e17)
+vat=\u0e20\u0e32\u0e29\u0e35\u0e21\u0e39\u0e25\u0e04\u0e48\u0e32\u0e40\u0e1e\u0e34\u0e48\u0e21(\u0e1a\u0e32\u0e17)
+vat_sappasamit=\u0e20\u0e32\u0e29\u0e35\u0e2a\u0e23\u0e23\u0e1e\u0e2a\u0e32\u0e21\u0e34\u0e15(\u0e1a\u0e32\u0e17)
+vat_mahardthai=\u0e20\u0e32\u0e29\u0e35\u0e40\u0e1e\u0e37\u0e48\u0e2d\u0e21\u0e2b\u0e32\u0e14\u0e44\u0e17\u0e22(\u0e1a\u0e32\u0e17)
+commission=\u0e04\u0e48\u0e32\u0e18\u0e23\u0e23\u0e21\u0e40\u0e19\u0e35\u0e22\u0e21\u0e2d\u0e37\u0e48\u0e19\u0e46(\u0e1a\u0e32\u0e17)
+all=\u0e17\u0e31\u0e49\u0e07\u0e2b\u0e21\u0e14
+count=\u0e23\u0e32\u0e22\u0e01\u0e32\u0e23
+total=\u0e23\u0e27\u0e21
+combobox_garuntee=\u0e27\u0e32\u0e07\u0e1b\u0e23\u0e30\u0e01\u0e31\u0e19
+combobox_pay_vat=\u0e0a\u0e33\u0e23\u0e30\u0e04\u0e48\u0e32\u0e20\u0e32\u0e29\u0e35\u0e2d\u0e32\u0e01\u0e23
+reportStatJDA1=\u0e23\u0e32\u0e22\u0e07\u0e32\u0e19\u0e1b\u0e23\u0e30\u0e21\u0e27\u0e25\u0e1c\u0e25\u0e17\u0e32\u0e07\u0e2a\u0e16\u0e34\u0e15\u0e34\u0e01\u0e32\u0e23\u0e22\u0e37\u0e48\u0e19\u0e43\u0e1a\u0e02\u0e19\u0e2a\u0e34\u0e19\u0e04\u0e49\u0e32\u0e40\u0e02\u0e49\u0e32\u0e1e\u0e37\u0e49\u0e19\u0e17\u0e35\u0e48 JDA1
+combobox_equipment=\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e2d\u0e37\u0e48\u0e19\u0e46
+reportStatJDA2=\u0e23\u0e32\u0e22\u0e07\u0e32\u0e19\u0e1b\u0e23\u0e30\u0e21\u0e27\u0e25\u0e1c\u0e25\u0e17\u0e32\u0e07\u0e2a\u0e16\u0e34\u0e15\u0e34\u0e01\u0e32\u0e23\u0e22\u0e37\u0e48\u0e19\u0e43\u0e1a\u0e02\u0e19\u0e2a\u0e34\u0e19\u0e04\u0e49\u0e32\u0e2d\u0e2d\u0e01\u0e08\u0e32\u0e01\u0e1e\u0e37\u0e49\u0e19\u0e17\u0e35\u0e48 JDA2
+reportStatJDA3=\u0e23\u0e32\u0e22\u0e07\u0e32\u0e19\u0e1b\u0e23\u0e30\u0e21\u0e27\u0e25\u0e1c\u0e25\u0e17\u0e32\u0e07\u0e2a\u0e16\u0e34\u0e15\u0e34\u0e01\u0e32\u0e23\u0e22\u0e37\u0e48\u0e19\u0e43\u0e1a\u0e02\u0e19\u0e2a\u0e34\u0e19\u0e04\u0e49\u0e32\u0e40\u0e04\u0e25\u0e37\u0e48\u0e2d\u0e19\u0e22\u0e49\u0e32\u0e22 JDA3
+combobox_in=\u0e02\u0e2d\u0e07\u0e40\u0e04\u0e25\u0e37\u0e48\u0e2d\u0e19\u0e22\u0e49\u0e32\u0e22\u0e40\u0e02\u0e49\u0e32
+conbobox_out=\u0e02\u0e2d\u0e07\u0e40\u0e04\u0e25\u0e37\u0e48\u0e2d\u0e19\u0e22\u0e49\u0e32\u0e22\u0e2d\u0e2d\u0e01
+reportStatJDA4=\u0e23\u0e32\u0e22\u0e07\u0e32\u0e19\u0e1b\u0e23\u0e30\u0e21\u0e27\u0e25\u0e1c\u0e25\u0e17\u0e32\u0e07\u0e2a\u0e16\u0e34\u0e15\u0e34\u0e01\u0e32\u0e23\u0e22\u0e37\u0e48\u0e19\u0e43\u0e1a\u0e02\u0e19\u0e2a\u0e34\u0e19\u0e04\u0e49\u0e32\u0e02\u0e32\u0e2d\u0e2d\u0e01\u0e1e\u0e34\u0e40\u0e28\u0e29 JDA4
+showAllReport=\u0e41\u0e2a\u0e14\u0e07\u0e43\u0e1a\u0e02\u0e19\u0e17\u0e31\u0e49\u0e07\u0e2b\u0e21\u0e14
+date=\u0e27\u0e31\u0e19\u0e17\u0e35\u0e48
+vatArkorn=\u0e20\u0e32\u0e29\u0e35\u0e2d\u0e32\u0e01\u0e23
