--- a/EJDAWeb/WebContent/WEB-INF/EJdaFormParameterConfig.properties
+++ b/EJDAWeb/WebContent/WEB-INF/EJdaFormParameterConfig.properties
@@ -1,5 +1,5 @@
 # Form1 Input Field
-FORM1_INPUT_TOTAL = 9
+FORM1_INPUT_TOTAL = 62
 FORM1_INPUT_FIELD_00 = CONSIGNOR_CODE:Consignor/Exporter Code
 FORM1_INPUT_FIELD_01 = CONSIGNOR_NAME:Consignor/Exporter Name
 FORM1_INPUT_FIELD_02 = CONSIGNOR_ADDRESS:Consignor/Exporter Address
@@ -9,18 +9,73 @@ FORM1_INPUT_FIELD_05 = CONSIGNEE_ADDRESS:Consignee/Importer Address
 FORM1_INPUT_FIELD_06 = AUTHORAGENT_CODE:Code of Authorized Agent
 FORM1_INPUT_FIELD_07 = AUTHORAGENT_NAME:Code of Authorized Name
 FORM1_INPUT_FIELD_08 = AUTHORAGENT_ADDRESS:Code of Authorized Address
+FORM1_INPUT_FIELD_09 = MODE_TRANS:Type of Transport
+FORM1_INPUT_FIELD_10 = TRANS_OTHER:Type of Transport Other detail
+FORM1_INPUT_FIELD_11 = DATE_IMPORT:Date of Import
+FORM1_INPUT_FIELD_12 = TRANS_DETAIL:Name/No. of Transport
+FORM1_INPUT_FIELD_13 = PORTIMPORT_CODE:Port Import Code
+FORM1_INPUT_FIELD_14 = PORTIMPORT_DESC:Port Import Description
+FORM1_INPUT_FIELD_15 = PORTLOAD_CODE:Port Load Code
+FORM1_INPUT_FIELD_16 = PORTLOAD_DESC:Port Load Description
+FORM1_INPUT_FIELD_17 = VIA_CODE:Via Code
+FORM1_INPUT_FIELD_18 = VIA_DESC:Via Description
+FORM1_INPUT_FIELD_19 = DATE_RECEIPT:Date Receipt
+FORM1_INPUT_FIELD_20 = REF_NO:Reference no (Attached)
+FORM1_INPUT_FIELD_21 = REGIS_NO:Register No.
+FORM1_INPUT_FIELD_22 = CUS_NAME_CODE:Name of Customs Office Code
+FORM1_INPUT_FIELD_23 = CUS_NAME_DESC:Name of Customs Office Description
+FORM1_INPUT_FIELD_24 = MANIFEST_NO:Manifest Registration No.
+FORM1_INPUT_FIELD_25 = DUTY_TAX_RECEIPT_DATE:Receip of Duty/Tax as Levied Authorized by date
+FORM1_INPUT_FIELD_26 = DUTY_TAX_RECEIPT_DESC:Receip of Duty/Tax as Levied Authorized by Proper Officer of Customs
+FORM1_INPUT_FIELD_27 = IMPORT_PERMIT_NO:Import permit No.
+FORM1_INPUT_FIELD_28 = EXCHG_CTRL_REF:Exchange Control Ref.
+FORM1_INPUT_FIELD_29 = SPECIAL_TREATMENT:Special Treatment
+FORM1_INPUT_FIELD_30 = COUNTRY_ORIGIN_CODE:Country of Origin Code
+FORM1_INPUT_FIELD_31 = COUNTRY_ORIGIN_DESC:Country of Origin Description
+FORM1_INPUT_FIELD_32 = COUNTRY_FINAL_CODE:Country of Final Destination code.
+FORM1_INPUT_FIELD_33 = COUNTRY_FINAL_DESC:Country of Final Destination Desc.
+FORM1_INPUT_FIELD_34 = BILL_NO:Bill of Lading or comsignment Note No.
+FORM1_INPUT_FIELD_35 = TERM_PAYMENT:Terms of Delivery and Payment
+FORM1_INPUT_FIELD_36 = CUR_CODE:Currency Code
+FORM1_INPUT_FIELD_37 = RECEIVED_AMOUNT:Amount Received/to be Received
+FORM1_INPUT_FIELD_38 = EQUIVALENT:Equivalent
+FORM1_INPUT_FIELD_39 = GOOD_PAYMENT_CODE:Payment for Goods Received/to be Received
+FORM1_INPUT_FIELD_40 = GOOD_PAYMENT_DESC:County to Which payment of Goods to be made
+FORM1_INPUT_FIELD_41 = COUNTRY_OF_GOOD:County to Which payment of Goods to be made
+FORM1_INPUT_FIELD_42 = FOB_VALUE:FOB Value 
+FORM1_INPUT_FIELD_43 = INSURANCE:Insurance
+FORM1_INPUT_FIELD_44 = FREIGHT:Freight
+FORM1_INPUT_FIELD_45 = CIF_VALUE:CIF Value
+FORM1_INPUT_FIELD_46 = GROSS_WEIGHT:Gross Wt.(Kg.)
+FORM1_INPUT_FIELD_47 = MEASUREMENT:Measurement(m3)
+FORM1_INPUT_FIELD_48 = OTHER_CHARG:Other Charges
+FORM1_INPUT_FIELD_49 = DECLARANT_NAME:Name of Declarant
+FORM1_INPUT_FIELD_50 = ID_CARD_NO:Identity Card/Passport No.
+FORM1_INPUT_FIELD_51 = STATUS:Status
+FORM1_INPUT_FIELD_52 = CERIFY:I cerify that this declaration is true and complete.
+FORM1_INPUT_FIELD_53 = CUS_REMOVAL:Removal from Customs Control authorized by
+FORM1_INPUT_FIELD_54 = TAX_TOTAL:Total Duty/Tax Payable
+FORM1_INPUT_FIELD_55 = OTHER_CHARG2:Other Charges 2
+FORM1_INPUT_FIELD_56 = PAYABLE_AMOUNT:Total Amount Payable
+FORM1_INPUT_FIELD_57 = MANUALSCRIPT_RECERPT:Manualscript Recerpt No.(If applicable)
+FORM1_INPUT_FIELD_58 = VESSEL_VALUE:No/Name of vessel/Flight/conveyanee
+FORM1_INPUT_FIELD_59 = INSTRUCT_EXAM:INSTRUCTION FOR EXAMINATION
+FORM1_INPUT_FIELD_60 = RESULT_EXAM:RESULT OF EXAMINATION
+FORM1_INPUT_FIELD_61 = FOR_OTHER_USE:FOR OTHER USE
 
-# Form2 Input Field
-FORM2_INPUT_TOTAL = 9
-FORM2_INPUT_FIELD_00 = CONSIGNOR_CODE:Consignor/Exporter Code
-FORM2_INPUT_FIELD_01 = CONSIGNOR_NAME:Consignor/Exporter Name
-FORM2_INPUT_FIELD_02 = CONSIGNOR_ADDRESS:Consignor/Exporter Address
-FORM2_INPUT_FIELD_03 = CONSIGNEE_CODE:Consignee/Importer Code
-FORM2_INPUT_FIELD_04 = CONSIGNEE_NAME:Consignee/Importer Name
-FORM2_INPUT_FIELD_05 = CONSIGNEE_ADDRESS:Consignee/Importer Address
-FORM2_INPUT_FIELD_06 = AUTHORAGENT_CODE:Code of Authorized Agent
-FORM2_INPUT_FIELD_07 = AUTHORAGENT_NAME:Code of Authorized Name
-FORM2_INPUT_FIELD_08 = AUTHORAGENT_ADDRESS:Code of Authorized Address
+
+FORM3_INPUT_FIELD_62 = MOVEMENT_PEMIT_NO:Movement Pemit No.(if applicable)
+FORM3_INPUT_FIELD_63 = EXPIRE_DATE:Date of Expiry
+FORM3_INPUT_FIELD_64 = SECURITY_REF_NO:Security Ref. No(if applicable)
+FORM3_INPUT_FIELD_65 = SECURITY_AMT:Amount of Security
+FORM3_INPUT_FIELD_66 = RECEIVE_AMT:Amount Received/To Be Received
+FORM3_INPUT_FIELD_67 = BILL_OF_LADING:Bill of Lading/Consignment Note No.
+FORM3_INPUT_FIELD_68 = PROPER_OFFICE:To Proper Office of Customs at
+FORM3_INPUT_FIELD_69 = REQUEST_APPROVED:Request Approved
+FORM3_INPUT_FIELD_70 = CERTIFIED:Certified that the above goods have been duty moved Removal from customs control is aulhoried
+FORM3_INPUT_FIELD_71 = REMARK:Remark
+
+
 
 # Lables Properties
 CONSIGNOR_CODE = Consignor/Exporter Code
